# MySQL_Backup

./: README.md  pyproject.toml
src/: __init__.py  analytics.py  borgbackup.py  cleaning.py  migrate.py  mysql_backup.py  search_file.py  settings.py  snapshot.py
src/MySQL_Backup/: __init__.py  analytics.py  cleaning.py  migrate.py  mysql_backup.py  settings.py  snapshot.py  test.py  test2.py
src/MySQL_Backup.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test.py  test2.py  test3.py  test4.py  test_borg.py  test_lvm.py  test_mysqldump.py  test_read_binlog.py  test_stdin.py  test_stdin2.py  test_vgmount.py
