[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "MySQL_Backup"
version = "0.0.1"
authors = [
  { name="Joel Sabouret", email="joel@netwitch.de" },
]
description = "MySQL Database BAckup program"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: LGPLlv3",
    "Operating System :: Linux",
]
